Style change and bugfix for dates on View Event View not showing time

--- a/evnt-webapp/src/main/webapp/VAADIN/themes/EvntWebapp/evntwebapp.scss
+++ b/evnt-webapp/src/main/webapp/VAADIN/themes/EvntWebapp/evntwebapp.scss
@@ -4,9 +4,9 @@
 	@include valo;
 
     .v-slot-navbar{
-        background-color: #FFC0BE;
+        background-color: #FFCC00;
         padding: 10px;
-        box-shadow: 0px 0px 10px #AA6666;
+        box-shadow: 0px 0px 10px #885500;
         border-radius: 10px;
     }
 
@@ -16,6 +16,6 @@
     }
 
     .v-panel{
-        @include linear-gradient(#FFF0F0, white);
+        @include linear-gradient(#AADDFF, white);
     }
 }
