--- a/evnt-webapp/src/main/webapp/VAADIN/themes/EvntWebapp/styles.css
+++ b/evnt-webapp/src/main/webapp/VAADIN/themes/EvntWebapp/styles.css
@@ -15051,9 +15051,9 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .EvntWebapp .v-slot-navbar {
-	background-color: #FFC0BE;
+	background-color: #FFCC00;
 	padding: 10px;
-	box-shadow: 0px 0px 10px #AA6666;
+	box-shadow: 0px 0px 10px #885500;
 	border-radius: 10px;
 }
 
@@ -15063,7 +15063,7 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .EvntWebapp .v-panel {
-	background-color: #FFF0F0;
-	background-image: -webkit-linear-gradient(#FFF0F0, white);
-	background-image: linear-gradient(#FFF0F0, white);
+	background-color: #AADDFF;
+	background-image: -webkit-linear-gradient(#AADDFF, white);
+	background-image: linear-gradient(#AADDFF, white);
 }
